2011-03-26  fdaluisio <fdaluisio@fedoraproject.org>

  * src/net/ildn/debianitalia/DebianBlogActivity.java,
  src/net/ildn/debianitalia/DebianGuideActivity.java,
  src/net/ildn/debianitalia/DebianNewsActivity.java,
  src/net/ildn/fedorait/BlogActivity.java,
  src/net/ildn/fedorait/GuideActivity.java,
  src/net/ildn/fedorait/NewsActivity.java,
  src/net/ildn/fedorait/WebContent.java,
  .../ildn/mandrivaitalia/MandrivaBlogActivity.java,
  .../ildn/mandrivaitalia/MandrivaGuideActivity.java,
  .../ildn/mandrivaitalia/MandrivaNewsActivity.java,
  src/net/ildn/suseitalia/SuseBlogActivity.java,
  src/net/ildn/suseitalia/SuseGuideActivity.java,
  src/net/ildn/suseitalia/SuseNewsActivity.java: Bugfix. Non si vedono tutte le
  immagini. Fornendo il baseUrl al loaddata della webview ora si riescono ad
  visualizzare tutte le immagini del tag description anche quelle che hanno un
  href relativo.  Enhancement Cambiata la barra di navigazione nella webview.
  ora mostra il sito su cui navigo. Permette all'utente di capire se è ancora
  su un portale ildn oppure è finito su un sito esterno al network.

  * src/net/ildn/fedorait/BlogActivity.java,
  .../ildn/mandrivaitalia/MandrivaBlogActivity.java: fix fonte nella webview
  per blog fedora e mandriva

2011-03-25  fdaluisio <fdaluisio@fedoraproject.org>

  * .gitignore: exclude bin/

  * README: improved some useful Eclipse information

  * .classpath: first project import

  * .project: change eclipse project to ildn-hub

  * .project: first import

  * AndroidManifest.xml, build.xml, default.properties,
  gen/net/ildn/fedorait/R.java, proguard.cfg, res/drawable-hdpi/icon.png,
  res/drawable-ldpi/icon.png, res/drawable-mdpi/icon.png,
  res/drawable/ic_tab_artists_grey.png, res/drawable/ic_tab_artists_white.png,
  res/drawable/ic_tab_blog.xml, res/drawable/ic_tab_forum.xml,
  res/drawable/ic_tab_guide.xml, res/drawable/ic_tab_news.xml,
  res/drawable/ic_tab_other.xml, res/drawable/iconb.png,